autoload  a composer.json-ban

--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,10 @@
             "email": "rimelek@rimelek.hu"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "Rimelek\\Misc\\" : "src/"
+        }
+    }
 }
