add MIT license to the composer json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "rimelek/url-handler",
-    "description": "URL handler parse URLs .",
+    "description": "URL handler parse URLs",
+    "license": "MIT",
     "authors": [
         {
             "name": "Takács Ákos",
