--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "rimelek@rimelek.hu"
         }
     ],
-    "require": {},
+    "require": {
+        "php": ">=5.6"
+    },
     "autoload": {
         "psr-4": {
             "Rimelek\\URLHandler\\" : "src/"
